work on home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    
     
   <img src="IMAGES/main-image.png" alt="main-image" class="main-image">
-  <a href="Acceuil.html"><p class="coming-soon">ENTER</p></a> 
+
+  <a href="Acceuil.html" class="btn">ENTER</a>
+ 
 </body>
 </html>  
