work on hero section

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -118,7 +118,7 @@
                     <p>30% off Summer Vacation</p>
                     <a href="#" class="shop-now-btn">SHOP NOW</a>
                 </div>
-                <img src="IMAGES/hero-image1.png" alt="Fashion Model 1">
+                <img src="IMAGES/cover1-removebg-preview.png" alt="Fashion Model 1">
             </div>
             <div class="slide">
                 <div class="hero-content">
@@ -126,7 +126,7 @@
                     <p>Special Offers & Discounts</p>
                     <a href="#" class="shop-now-btn">DISCOVER NOW</a>
                 </div>
-                <img src="IMAGES/hero2.png" alt="Fashion Model 2">
+                <img src="IMAGES/cover1-removebg-preview.png" alt="Fashion Model 2">
             </div>
             <div class="slide">
                 <div class="hero-content">
@@ -134,7 +134,7 @@
                     <p>Best Deals of the Season</p>
                     <a href="#" class="shop-now-btn">EXPLORE NOW</a>
                 </div>
-                <img src="IMAGES/hero3.png" alt="Fashion Model 3">
+                <img src="IMAGES/cover1-removebg-preview.png" alt="Fashion Model 3">
             </div>
         </div>
 
