work on new arrival

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -182,7 +182,7 @@
             <!-- Répéter pour chaque produit -->
             <div class="product-card">
                 <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
+                <img src="IMAGES/product-test.png" alt="Product">
                 <h3>T-Shirt And Jeans</h3>
                 <p class="product-price">
                     <span class="discount">$65.00</span>
@@ -192,18 +192,7 @@
 
             <div class="product-card">
                 <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
-                <h3>T-Shirt And Jeans</h3>
-                <p class="product-price">
-                    <span class="discount">$65.00</span>
-                    $60.00
-                </p>
-            </div>
-
-
-            <div class="product-card">
-                <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
+                <img src="IMAGES/product-test.png" alt="Product">
                 <h3>T-Shirt And Jeans</h3>
                 <p class="product-price">
                     <span class="discount">$65.00</span>
@@ -214,37 +203,7 @@
 
             <div class="product-card">
                 <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
-                <h3>T-Shirt And Jeans</h3>
-                <p class="product-price">
-                    <span class="discount">$65.00</span>
-                    $60.00
-                </p>
-            </div>
-
-            <div class="product-card">
-                <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
-                <h3>T-Shirt And Jeans</h3>
-                <p class="product-price">
-                    <span class="discount">$65.00</span>
-                    $60.00
-                </p>
-            </div>
-
-            <div class="product-card">
-                <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
-                <h3>T-Shirt And Jeans</h3>
-                <p class="product-price">
-                    <span class="discount">$65.00</span>
-                    $60.00
-                </p>
-            </div>
-
-            <div class="product-card">
-                <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
+                <img src="IMAGES/product-test.png" alt="Product">
                 <h3>T-Shirt And Jeans</h3>
                 <p class="product-price">
                     <span class="discount">$65.00</span>
@@ -255,7 +214,37 @@
 
             <div class="product-card">
                 <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
+                <img src="IMAGES/product-test.png" alt="Product">
+                <h3>T-Shirt And Jeans</h3>
+                <p class="product-price">
+                    <span class="discount">$65.00</span>
+                    $60.00
+                </p>
+            </div>
+
+            <div class="product-card">
+                <span class="tag-new">New</span>
+                <img src="IMAGES/product-test.png" alt="Product">
+                <h3>T-Shirt And Jeans</h3>
+                <p class="product-price">
+                    <span class="discount">$65.00</span>
+                    $60.00
+                </p>
+            </div>
+
+            <div class="product-card">
+                <span class="tag-new">New</span>
+                <img src="IMAGES/product-test.png" alt="Product">
+                <h3>T-Shirt And Jeans</h3>
+                <p class="product-price">
+                    <span class="discount">$65.00</span>
+                    $60.00
+                </p>
+            </div>
+
+            <div class="product-card">
+                <span class="tag-new">New</span>
+                <img src="IMAGES/product-test.png" alt="Product">
                 <h3>T-Shirt And Jeans</h3>
                 <p class="product-price">
                     <span class="discount">$65.00</span>
@@ -266,7 +255,18 @@
 
             <div class="product-card">
                 <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
+                <img src="IMAGES/product-test.png" alt="Product">
+                <h3>T-Shirt And Jeans</h3>
+                <p class="product-price">
+                    <span class="discount">$65.00</span>
+                    $60.00
+                </p>
+            </div>
+
+
+            <div class="product-card">
+                <span class="tag-new">New</span>
+                <img src="IMAGES/product-test.png" alt="Product">
                 <h3>T-Shirt And Jeans</h3>
                 <p class="product-price">
                     <span class="discount">$65.00</span>
@@ -276,7 +276,7 @@
 
             <div class="product-card">
                 <span class="tag-new">New</span>
-                <img src="/api/placeholder/200/200" alt="Product">
+                <img src="IMAGES/product-test.png" alt="Product">
                 <h3>T-Shirt And Jeans</h3>
                 <p class="product-price">
                     <span class="discount">$65.00</span>
@@ -288,12 +288,12 @@
         </div>
     </section>
 
-    <section class="blog">
+    <section class="best-seller">
         <div class="section-title">
-            <h2>OUR BLOG</h2>
+            <h2>BEST SELLER</h2>
         </div>
-        <div class="blog-grid">
-            <div class="blog-card">
+        <div class="best-seller-grid">
+            <div class="best-seller-card">
                 <img src="/api/placeholder/350/200" alt="Blog post">
                 <span>Lifestyle</span>
                 <h3>Lorem ipsum dolor sit amet consec.</h3>
