--- a/Acceuil.html
+++ b/Acceuil.html
@@ -20,7 +20,7 @@
         </button>
 
 
-        <div class="logo"><img src="" alt=""></div>
+        <div class="logo"><img src="IMAGES/LOGO.png" alt=""></div>
         
 
         <nav>
