work on footer section

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -109,7 +109,7 @@
         </div>
     </header>
 
-    <!-- Reste du contenu précédent... -->
+    <!-- section hero... -->
 
     <section class="hero">
         <div class="slider">
