ajout des liens gallery pour shooting

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -98,7 +98,7 @@
                     <a href="#">MB Fondation</a>
                    
                 </li>
-                <li><a href="#">Shooting</a></li>
+                <li><a href="Gallerie.html">Shooting</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
