ajout lien sur le logo

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -20,7 +20,9 @@
         </button>
 
 
-        <div class="logo"><img src="IMAGES/LOGO.png" alt=""></div>
+        <div class="logo">
+          <a href="Acceuil.html"><img src="IMAGES/LOGO.png" alt="logo"></a>
+        </div>
         
 
         <nav>
