--- a/Gallerie.html
+++ b/Gallerie.html
@@ -125,7 +125,9 @@ body {
         </button>
 
 
-        <div class="logo"><img src="IMAGES/LOGO.png" alt=""></div>
+        <div class="logo">
+            <a href="Acceuil.html"><img src="IMAGES/LOGO.png" alt="logo"></a>
+        </div>
         
 
         <nav>
