--- a/index.html
+++ b/index.html
@@ -10,8 +10,21 @@
 <body>
    
     
-  <img src="IMAGES/main-image.png" alt="main-image" class="main-image">
+    <img src="IMAGES/logonoiror.JPEG" alt="main-image" class="main-image">
 
+<!--  <video controls width="1500">
+   
+  
+    <source src="IMAGES/Videologo.mp4" type="video/mp4" />
+  
+    Download the
+    <a href="/media/cc0-videos/flower.webm">WEBM</a>
+    or
+    <a href="/media/cc0-videos/flower.mp4">MP4</a>
+    video.
+  </video>  
+
+  -->
   <a href="Acceuil.html" class="btn">ENTER</a>
  
 </body>
