work on main page

--- a/Gallerie.html
+++ b/Gallerie.html
@@ -142,11 +142,10 @@ body {
                         <div class="category">
                             <h3><ul> <li><a href="#">Men's Fashion</a></li></ul></h3>
                             <ul>
-                                <li><a href="#">T-Shirts</a></li>
-                                <li><a href="#">Shirts</a></li>
-                                <li><a href="#">Pants</a></li>
-                                <li><a href="#">Jeans</a></li>
-                                <li><a href="#">Shoes</a></li>
+                                <li><a href="#">collection-1</a></li>
+                                <li><a href="#">collection-2</a></li>
+                                <li><a href="#">collection-3</a></li>
+                               
                             </ul>
                         </div>
                         <div class="category">
