--- a/Acceuil.html
+++ b/Acceuil.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MB-CREATION</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="" />
    <link rel="stylesheet" href="acceuil.css">
   
 </head>
