--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="Acceuil.html">Home</a>
                    
                 </li>
                 <li>
