--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
   .stats-number {
     font-size: 24px;
     font-weight: 600;
-    color: #c7c436;
+    color: #ead833;
   }
 
   .stats-text {
@@ -75,9 +75,9 @@
    
   }
 
-  .product-image {
-    width: 100%;
-    height: 400px;
+  .item-image {
+    width: 600px;
+   
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 10px;
@@ -244,7 +244,7 @@
           <div class="stats-text">Clients satisfaits</div>
         </div>
         <div class="image-card">
-          <img src="IMAGES/hero-image1.png" alt="Product" class="product-image">
+          <img src="IMAGES/hero-image1.png" alt="Product" class="item-image">
           <div class="ratings">⭐⭐⭐⭐⭐</div>
         </div>
       </div>
@@ -278,8 +278,12 @@
             <ul>
                 <li><a href="#">Our Story</a></li>
                 <li><a href="#">Store location</a></li>
-                <li><a href="#">Contact</a></li>
-                
+                <li><a href="#">Socials</a></li>
+                <div class="socials">
+                  <a href="">facebook</a>
+                  <a href="">instagram</a>
+                  <a href="">twitter</a>
+              </div>
             </ul>
         </div>
         <div class="footer-column">
