--- a/Acceuil.html
+++ b/Acceuil.html
@@ -170,7 +170,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
     </section>
 
 
-    <section class="Products"  id="cocktails">
+    <section class="Products"  id="">
 
         <h1>New Arrival</h1>
     
@@ -231,7 +231,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <h2 class="product-title">Nom du Produit</h2>
                 <div class="product-price">99,99 €</div>
                 <p class="product-description">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    collection made of africa
                 </p>
                 <div class="product-specs">
                     <a href="#" class="buy-btn">Shop Now</a>
