add  male collection page

--- a/about.html
+++ b/about.html
@@ -251,10 +251,11 @@
 
       <!-- Right Column -->
       <div class="about-section">
-        <h2>À propos de nous</h2>
-        <h1>Notre Histoire</h1>
+        <h2>About Us</h2>
+        <h1>Our Story</h1>
         <div class="about-text" id="aboutText">
-          Notre entreprise s'engage à fournir des produits de qualité supérieure pour votre bien-être quotidien...
+          MB-Creation... clothing that tells a story...
+
         </div>
         <button class="expand-btn" id="expandBtn">
           Clique to know more
@@ -306,13 +307,20 @@
 </footer>
 
   <script>
-    const fullText = `Notre entreprise s'engage à fournir des produits de qualité supérieure pour votre bien-être quotidien. 
-    Nous travaillons sans relâche pour améliorer et innover nos formules. Notre équipe passionnée recherche constamment
-     de nouvelles solutions pour répondre à vos besoins. Nous croyons en la transparence 
-     et en l'utilisation d'ingrédients naturels de première qualité. Notre mission est de vous accompagner
-      dans votre parcours vers une vie plus saine et équilibrée.`;
+    const fullText = `MB-Creation... clothing that tells a story. 
+
+
+MB-Creation is an Afro-urban and chic Afro-urban clothing brand that was established under the initiative of its promoter and designer, Manuella Bufang, in 2017. Indeed, Mrs. Bufang has been passionate about fashion since her early adolescence. She is also very committed to the social and cultural development of her home country, Cameroon, through various charitable works and cultural events. This is how the idea came to her to combine her passions and her causes. The philosophy of the brand lies in its logo, which represents a proliferating root. This root refers to our essence but also to expansion. It is about reconnecting with our culture through clothing and sharing it with the world by connecting to it. To achieve this, the basic material for each piece will be AFRICAN PAGNE (traditional fabric).
+
+Thus, the brand's production will be based in Cameroon, aiming for "Made in Cameroon" while also creating employment. After multiple name changes, including B-Wear by M, Unik, Icône, and Authentic during the brand's creation phase, it will ultimately be registered as MB-Creation. MB-Creation is a brand that focuses on creating unique clothing. Manuella Bufang, the creator, highlights her personal style and originality in her collections. The emphasis is often placed on creative designs, utilizing quality materials and artisanal techniques. The brand aims to offer pieces that allow customers to stand out while celebrating their individuality.
+
+Through MB-Creation, Manuella Bufang proposes collections that reflect her identity and sense of fashion. Her creations are often characterized by bold patterns, modern cuts, and a blend of cultures, showcasing her multicultural background. She has drawn inspiration from her roots and personal experiences to design clothing that tells a story. Her artistic approach aims to celebrate individuality as well as diversity by offering pieces that cater to a clientele seeking style and authenticity.
+
+The label offers premium quality products often made with sustainable local materials and in respect of ethics.`;
     
-    const shortText = `Notre entreprise s'engage à fournir des produits de qualité supérieure pour votre bien-être quotidien...`;
+    const shortText = ` MB-Creation... clothing that tells a story...`;
+
+  
     
     const aboutText = document.getElementById('aboutText');
     const expandBtn = document.getElementById('expandBtn');
