--- a/Acceuil.html
+++ b/Acceuil.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -44,7 +45,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <a href="#" class="has-dropdown">Shop</a>
                     <div class="dropdown mega-menu">
                         <div class="category">
-                            <h3><ul> <li><a href="#">Men's Collections</a></li></ul></h3>
+                            <h3><ul> <li><a href="Men's.html">Men's Collections</a></li></ul></h3>
                             <ul>
                                 <li><a href="#">icône</a></li>
                                 <li><a href="#">icône 2.0</a></li>
@@ -426,12 +427,6 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <ul>
                     <li><a href="about.html">Our Story</a></li>
                     <li><a href="#">Store location</a></li>
-                    <li><a href="#">Socials :</a></li>
-                    <div class="socials">
-                        <a href="">facebook</a>
-                        <a href="">instagram</a>
-                        <a href="">twitter</a>
-                    </div>
                 </ul>
             </div>
             <div class="footer-column">
@@ -440,6 +435,15 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <li><a href="#">Returns</a></li>
                     <li><a href="#">Size guide</a></li>
                     <li><a href="#">FAQs</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-column">
+                <h3>FOLLOW US</h3>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
                 </ul>
             </div>
             <div class="footer-column">
