work on about section

--- a/Men's.html
+++ b/Men's.html
@@ -572,7 +572,7 @@ footer {
         <!-- Slide 1 -->
         <div class="slide active">
             <div class="slide-content">
-                <h1>THE BEST FASHION<br>THEME WP</h1>
+                <h1>MADE OF<br> AFRICA</h1>
                 <p>Lorem ipsum is simply dummy text of the printing and type-setting industry.</p>
                 <a href="#" class="btn">Read more</a>
             </div>
@@ -584,8 +584,8 @@ footer {
         <!-- Slide 2 -->
         <div class="slide">
             <div class="slide-content">
-                <h1>SUMMER<br>COLLECTION</h1>
-                <p>Discover our latest summer collection with amazing discounts.</p>
+                <h1>Male<br>COLLECTION</h1>
+                <p>Discover our latest amazing male collection .</p>
                 <a href="#" class="btn">Shop Now</a>
             </div>
             <div class="slide-image">
@@ -624,12 +624,12 @@ footer {
   <!-- Categories -->
   <section class="categories">
     <div class="category-card">
-      <h2>MAN FASHION</h2>
+      <h2>MAN COLLECTION</h2>
       <p>Lorem ipsum is simply dummy text of the printing.</p>
       <a href="#" class="btn">Read more</a>
     </div>
     <div class="category-card">
-      <h2>BEST SELLING HANDBAGS</h2>
+      <h2>BEST SELLING COLLECTION</h2>
       <img src="/api/placeholder/200/200" alt="Handbag">
     </div>
     <div class="category-card">
