--- a/about.html
+++ b/about.html
@@ -37,16 +37,12 @@
 
   @media (max-width: 768px) {
     .grid {
-      grid-template-columns: 1fr;
+      grid-template-columns: repeat(1,1fr);
     }
 
-    .product-image {
-    width: 100%;
-    height: 600px;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 10px;
-  }
+
+
+   
   }
 
   .stats-card {
@@ -182,6 +178,26 @@
         .title-store{
           text-align: center;
           font-size: 3rem;
+        }
+
+
+        @media screen and (max-width: 768px){
+          .item-image {
+             width: 250px;
+             object-fit: cover;
+             border-radius: 8px;
+             margin-bottom: 10px;
+             }
+
+             .video-container {
+            max-width: 350px;
+            margin: 2rem auto;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+
         }
 
 </style>
