work on main page

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -111,8 +111,8 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="slider">
             <div class="slide active">
                 <div class="hero-content">
-                    <h1>Stylish<br>Male Collection</h1>
-                    <p>30% off Summer Vacation</p>
+                    <h1>Stylish<br>Men's Collection</h1>
+                    <p></p>
                     <a href="#" class="shop-now-btn">SHOP NOW</a>
                 </div>
                 <img src="IMAGES/sellers1__3_-removebg-preview.png" alt="Fashion Model 1" width="500">
@@ -127,7 +127,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             </div>
             <div class="slide">
                 <div class="hero-content">
-                    <h1>womens<br>collection</h1>
+                    <h1>Premium<br>Fabric</h1>
                     <p>Best Deals of the Season</p>
                     <a href="#" class="shop-now-btn">EXPLORE NOW</a>
                 </div>
