Refactor and update website structure: removed unused CSS and JS files, consolidated styles, and updated image paths. Enhanced the 'about' section and improved responsiveness across various pages. Cleaned up the codebase by deleting obsolete files and ensuring all links point to the correct asset locations.

--- a/index.html
+++ b/index.html
@@ -3,32 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MB-CREATION</title>
-    <link rel="stylesheet" href="style.css">
+    <title>MB-CREATION - Mode et Design de Pointe</title>
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Kaushan+Script&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Kaushan+Script&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap" rel="stylesheet">
+    <meta name="description" content="MB-CREATION, votre destination pour les dernières tendances de la mode et du design. Découvrez nos collections exclusives et faites preuve de créativité avec nos produits uniques.">
+    <meta name="keywords" content="mode, design, créativité, produits uniques, tendances, MB-CREATION">
+    <meta name="author" content="MB-CREATION">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
-   
-    
-    <img src="IMAGES/logonoiror.JPEG" alt="main-image" class="main-image">
-
-<!--  <video controls width="1500">
-   
-  
-    <source src="IMAGES/Videologo.mp4" type="video/mp4" />
-  
-    Download the
-    <a href="/media/cc0-videos/flower.webm">WEBM</a>
-    or
-    <a href="/media/cc0-videos/flower.mp4">MP4</a>
-    video.
-  </video>  
-
-  -->
-  <a href="Acceuil.html" class="btn">ENTER</a>
- 
+    <img src="assets/images/logonoiror.JPEG" alt="main-image" class="main-image">
+    <a href="Acceuil.html" class="btn">ENTER</a>
 </body>
-</html>  
+</html>
