Update about.html  add links

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/about.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Kaushan+Script&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="acceuil.css">
+    <link rel="stylesheet" href="assets/css/acceuil.css">
 </head>    
 <html>
 <head>
@@ -207,7 +207,7 @@
     </div>
 </footer>
 
-  <script src="about.js"></script>
-  <script src="main.js"></script>
+  <script src="assets/js/about.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
