--- a/Acceuil.html
+++ b/Acceuil.html
@@ -109,7 +109,8 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
         <div class="slider">
             <div class="slide active">
                 <div class="hero-content">
-                    <h1>Stylish<br>Men's Collection</h1>
+                    <h1>stylish  <br>men’s design
+                    </h1>
                     <p></p>
                     <a href="#" class="shop-now-btn">SHOP NOW</a>
                 </div>
@@ -117,7 +118,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
             </div>
             <div class="slide">
                 <div class="hero-content">
-                    <h1>New Kids<br>Collection</h1>
+                    <h1>New Kid's<br>Collection</h1>
                     <p>Special Offers & Discounts</p>
                     <a href="#" class="shop-now-btn">DISCOVER NOW</a>
                 </div>
