work on men page

--- a/Men's.html
+++ b/Men's.html
@@ -14,7 +14,6 @@
   700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&
   family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&display=swap" rel="stylesheet"> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
- 
   <link rel="stylesheet" href="assets/css/men.css">
 </head>
 <body>
@@ -188,12 +187,10 @@
   </section>
 
   <!-- Products -->
-<style>
 
 
-</style>
-</head>
-<body>
+<h1 class="best-sellers-title">Best Sellers</h1>
+
 <div class="product-grid" id="productGrid"></div>
 
 <div id="productModal" class="modal">
@@ -207,14 +204,6 @@
 </div>
 </div>
 
-
-
-
-  
-  
-
- 
- 
 
  <!-- Products 
 
@@ -266,6 +255,85 @@
  -->
 
    
+<section class="collections">
+
+
+
+
+ <div class="collection">
+    <h2 class="collection-title">Icone</h2>
+    <div class="products-grid">
+        <div class="products-card">
+            <img src="assets/images/malepage (1).PNG" alt="Produit 1" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">39.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="assets/images/malepage (2).PNG" alt="Produit  2" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">49.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="assets/images/malepage (3).PNG" alt="Produit 3" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">79.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+    </div>
+</div>
+
+<div class="collection">
+    <h2 class="collection-title">Icone 2.0</h2>
+    <div class="products-grid">
+        <div class="products-card">
+            <img src="/api/placeholder/200/250" alt="Produit 1" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">159.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="/api/placeholder/200/250" alt="Produit 2" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">89.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="/api/placeholder/200/250" alt="Produit 3" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">34.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+    </div>
+</div>
+
+
+<div class="collection">
+    <h2 class="collection-title">Made Of Africa</h2>
+    <div class="products-grid">
+        <div class="products-card">
+            <img src="/api/placeholder/200/250" alt="Produit 1" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">159.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="/api/placeholder/200/250" alt="Produit 2" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">89.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+        <div class="products-card">
+            <img src="/api/placeholder/200/250" alt="Produit 3" class="products-image">
+            <div class="product-name">product name</div>
+            <div class="product-price">34.99€</div>
+            <button class="add-to-cart">Add To Cart</button>
+        </div>
+    </div>
+</div>
+
+</section>
    <!-- Footer -->
      
   <footer>
