WORK ON WOMAN PAGE

--- a/Men's.html
+++ b/Men's.html
@@ -54,9 +54,9 @@
                     <div class="category">
                         <h3><ul> <li><a href="women.html">Womens collections</a></li></ul></h3>
                         <ul>
-                            <li><a href="#">icône</a></li>
-                            <li><a href="#">icône 2.0</a></li>
-                            <li><a href="#"> ⁠made of Africa </a></li>
+                            <li><a href="#icone">icône</a></li>
+                            <li><a href="#icone-2.0">icône 2.0</a></li>
+                            <li><a href="#made-of-africa"> ⁠made of Africa </a></li>
                            
                         </ul>
                     </div>
@@ -189,20 +189,7 @@
   <!-- Products -->
 
 
-<h1 class="best-sellers-title">Best Sellers</h1>
 
-<div class="product-grid" id="productGrid"></div>
-
-<div id="productModal" class="modal">
-<div class="modal-content">
-    <span class="close-modal">&times;</span>
-    <img id="modalImage" src="" alt="Détail du produit" style="max-width: 100%; margin-bottom: 20px;">
-    <h2 id="modalTitle"></h2>
-    <p id="modalDescription"></p>
-    <p id="modalPrice" class="price"></p>
-    <button id="buyButton">Acheter</button>
-</div>
-</div>
 
 
  <!-- Products 
@@ -261,7 +248,7 @@
 
 
  <div class="collection">
-    <h2 class="collection-title">Icone</h2>
+    <h2 class="collection-title" id="icone"  >Icone</h2>
     <div class="products-grid">
         <div class="products-card">
             <img src="assets/images/malepage (1).PNG" alt="Produit 1" class="products-image">
@@ -285,7 +272,7 @@
 </div>
 
 <div class="collection">
-    <h2 class="collection-title">Icone 2.0</h2>
+    <h2 class="collection-title"  id="icone-2.0" >Icone 2.0</h2>
     <div class="products-grid">
         <div class="products-card">
             <img src="/api/placeholder/200/250" alt="Produit 1" class="products-image">
@@ -310,7 +297,7 @@
 
 
 <div class="collection">
-    <h2 class="collection-title">Made Of Africa</h2>
+    <h2 class="collection-title"  id="made-of-africa">Made Of Africa</h2>
     <div class="products-grid">
         <div class="products-card">
             <img src="/api/placeholder/200/250" alt="Produit 1" class="products-image">
@@ -334,6 +321,24 @@
 </div>
 
 </section>
+
+
+
+
+<h1 class="best-sellers-title">Best Sellers</h1>
+
+<div class="product-grid" id="productGrid"></div>
+
+<div id="productModal" class="modal">
+<div class="modal-content">
+    <span class="close-modal">&times;</span>
+    <img id="modalImage" src="" alt="Détail du produit" style="max-width: 100%; margin-bottom: 20px;">
+    <h2 id="modalTitle"></h2>
+    <p id="modalDescription"></p>
+    <p id="modalPrice" class="price"></p>
+    <button id="buyButton">Acheter</button>
+</div>
+</div>
    <!-- Footer -->
      
   <footer>
