Work on women page

--- a/women.html
+++ b/women.html
@@ -179,7 +179,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                 <div class="main-image-wrapper image-wrapper">
                     <div class="image-overlay">
                         <div class="image-text">
-                            Découvrez Notre Collection Exclusive
+                            Discover Our Exclusive Collection <br> Made of Africa
                         </div>
                         <button class="image-button">
                             Voir Plus
@@ -190,10 +190,10 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <div class="side-image image-wrapper">
                         <div class="image-overlay">
                             <div class="image-text">
-                                Nouveautés Printemps
+                                New
                             </div>
                             <button class="image-button">
-                                Découvrir
+                               Discover
                             </button>
                         </div>
                     </div>
@@ -258,19 +258,19 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
            <h2 class="collection-title"  id="icone-2.0" >Icone 2.0</h2>
            <div class="products-grid">
                <div class="products-card">
-                   <img src="/api/placeholder/200/250" alt="Produit 1" class="products-image">
+                   <img src="assets/images/slider1 (4).jpg" alt="Produit 1" class="products-image">
                    <div class="product-name">product name</div>
                    <div class="product-price">159.99€</div>
                    <button class="add-to-cart">Add To Cart</button>
                </div>
                <div class="products-card">
-                   <img src="/api/placeholder/200/250" alt="Produit 2" class="products-image">
+                   <img src="assets/images/slider1 (5).jpg" alt="Produit 2" class="products-image">
                    <div class="product-name">product name</div>
                    <div class="product-price">89.99€</div>
                    <button class="add-to-cart">Add To Cart</button>
                </div>
                <div class="products-card">
-                   <img src="/api/placeholder/200/250" alt="Produit 3" class="products-image">
+                   <img src="assets/images/slider1 (6).jpg" alt="Produit 3" class="products-image">
                    <div class="product-name">product name</div>
                    <div class="product-price">34.99€</div>
                    <button class="add-to-cart">Add To Cart</button>
