work on trending section on woman page

--- a/women.html
+++ b/women.html
@@ -182,7 +182,7 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                             Discover Our Exclusive Collection <br> Made of Africa
                         </div>
                         <button class="image-button">
-                            Voir Plus
+                            See More...
                         </button>
                     </div>
                 </div>
@@ -200,10 +200,10 @@ family=Prociono&family=Raleway:ital,wght@0,100..900;1,100..900&family=Satisfy&di
                     <div class="side-image image-wrapper">
                         <div class="image-overlay">
                             <div class="image-text">
-                                Offres Spéciales
+                                Specials Offers
                             </div>
                             <button class="image-button">
-                                Profiter
+                                Enjoy
                             </button>
                         </div>
                     </div>
