work on women page

--- a/Men's.html
+++ b/Men's.html
@@ -46,9 +46,9 @@
                     <div class="category">
                         <h3><ul> <li><a href="Men's.html">Men's Collections</a></li></ul></h3>
                         <ul>
-                            <li><a href="#">icône</a></li>
-                            <li><a href="#">icône 2.0</a></li>
-                            <li><a href="#"> ⁠made of Africa </a></li>
+                            <li><a href="#icone">icône</a></li>
+                            <li><a href="#icone-2.0">icône 2.0</a></li>
+                            <li><a href="#made-of-africa"> ⁠made of Africa </a></li>
                         </ul>
                     </div>
                     <div class="category">
@@ -244,11 +244,58 @@
    
 <section class="collections">
 
+    <div class="collection">
+        <h2 class="collection-title"  id="made-of-africa">Made Of Africa</h2>
+        <div class="products-grid">
+            <div class="products-card">
+                <img src="assets/images/banner (1).png" alt="Produit 1" class="products-image">
+                <div class="product-name">product name</div>
+                <div class="product-price">159.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/banner (2).png" alt="Produit 2" class="products-image">
+                <div class="product-name">product name</div>
+                <div class="product-price">89.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/banner (3).png" alt="Produit 3" class="products-image">
+                <div class="product-name">product name</div>
+                <div class="product-price">34.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+        </div>
+    </div>
 
+    <div class="collection">
+        <h2 class="collection-title"  id="icone-2.0" >Icone 2.0</h2>
+        <div class="products-grid">
+            <div class="products-card">
+                <img src="assets/images/trendingpic (1).png" alt="Produit 1" class="products-image">
+                <div class="product-name">product name</div>
+                <div class="product-price">159.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/trendingpic (2).png" alt="Produit 2" class="products-image">
+                <div class="product-name">product name</div>
+                <div class="product-price">89.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+            <div class="products-card">
+                <img src="assets/images/shop3.png" alt="Produit 3" class="products-image">
+                <div class="product-name">product name</div>
+                <div class="product-price">34.99€</div>
+                <button class="add-to-cart">Add To Cart</button>
+            </div>
+        </div>
+    </div>
+    
 
 
  <div class="collection">
-    <h2 class="collection-title" id="icone"  >Icone</h2>
+    <h2 class="collection-title" id="icone">Icone</h2>
     <div class="products-grid">
         <div class="products-card">
             <img src="assets/images/malepage (1).PNG" alt="Produit 1" class="products-image">
@@ -271,74 +318,16 @@
     </div>
 </div>
 
-<div class="collection">
-    <h2 class="collection-title"  id="icone-2.0" >Icone 2.0</h2>
-    <div class="products-grid">
-        <div class="products-card">
-            <img src="/api/placeholder/200/250" alt="Produit 1" class="products-image">
-            <div class="product-name">product name</div>
-            <div class="product-price">159.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-        <div class="products-card">
-            <img src="/api/placeholder/200/250" alt="Produit 2" class="products-image">
-            <div class="product-name">product name</div>
-            <div class="product-price">89.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-        <div class="products-card">
-            <img src="/api/placeholder/200/250" alt="Produit 3" class="products-image">
-            <div class="product-name">product name</div>
-            <div class="product-price">34.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-    </div>
-</div>
 
 
-<div class="collection">
-    <h2 class="collection-title"  id="made-of-africa">Made Of Africa</h2>
-    <div class="products-grid">
-        <div class="products-card">
-            <img src="/api/placeholder/200/250" alt="Produit 1" class="products-image">
-            <div class="product-name">product name</div>
-            <div class="product-price">159.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-        <div class="products-card">
-            <img src="/api/placeholder/200/250" alt="Produit 2" class="products-image">
-            <div class="product-name">product name</div>
-            <div class="product-price">89.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-        <div class="products-card">
-            <img src="/api/placeholder/200/250" alt="Produit 3" class="products-image">
-            <div class="product-name">product name</div>
-            <div class="product-price">34.99€</div>
-            <button class="add-to-cart">Add To Cart</button>
-        </div>
-    </div>
-</div>
+
 
 </section>
 
 
 
 
-<h1 class="best-sellers-title">Best Sellers</h1>
 
-<div class="product-grid" id="productGrid"></div>
-
-<div id="productModal" class="modal">
-<div class="modal-content">
-    <span class="close-modal">&times;</span>
-    <img id="modalImage" src="" alt="Détail du produit" style="max-width: 100%; margin-bottom: 20px;">
-    <h2 id="modalTitle"></h2>
-    <p id="modalDescription"></p>
-    <p id="modalPrice" class="price"></p>
-    <button id="buyButton">Acheter</button>
-</div>
-</div>
    <!-- Footer -->
      
   <footer>
